10 April 2024: Wouter
	- Implement cachedb-check-when-serve-expired: yes option, default
	  is enabled. When serve expired is enabled with cachedb, it first
	  checks cachedb before serving the expired response.
	- Fixup compile without cachedb.
	- Add test for cachedb serve expired.

9 April 2024: Yorgos
	- Merge #1043 from xiaoxiaoafeifei: Add loongarch support; updates
	  config.guess(2024-01-01) and config.sub(2024-01-01), verified
	  with upstream.

8 April 2024: Yorgos
	- Fix #595: unbound-anchor cannot deal with full disk; it will now
	  first write out to a temp file before replacing the original one,
	  like Unbound already does for auto-trust-anchor-file.

5 April 2024: Wouter
	- Fix comment syntax for view function views_find_view.

5 April 2024: Yorgos
	- Merge #1027: Introduce 'cache-min-negative-ttl' option.

3 April 2024: Wouter
	- Fix #1040: fix heap-buffer-overflow issue in function cfg_mark_ports
	  of file util/config_file.c.
	- For #1040: adjust error text and disallow negative ports in other
	  parts of cfg_mark_ports.

3 April 2024: Yorgos
	- Fix #1035: Potential Bug while parsing port from the "stub-host"
	  string; also affected forward-zones and remote-control host
	  directives.
	- Fix #369: dnstap showing extra responses; for client responses
	  right from the cache when replying with expired data or
	  prefetching.

28 March 2024: Wouter
	- Fix #1034: DoT forward-zone via unbound-control.
	- Fix for crypto related failures to have a better error string.

27 March 2024: Wouter
	- Fix name of unit test for subnet cache response.
	- Fix #1032: The size of subnet_msg_cache calculation mistake cause
	  memory usage increased beyond expectations.
	- Fix for #1032, add safeguard to make table space positive.
	- Fix comment in lruhash space function.
	- Fix to add unit test for lruhash space that exercises the routines.
	- Fix that when the server truncates the pidfile, it does not follow
	  symbolic links.